al diavolo fai sempre tutto te

--- a/E2/Latex/Pressione_vapore_H2O.tex
+++ b/E2/Latex/Pressione_vapore_H2O.tex
@@ -56,23 +56,22 @@ dove $P$ indica la pressione di vapore, $P_0$ è un parametro, $\Delta H$ è l'e
 
 Questa equazione descrive quindi il variare della pressione di vapore di una sostanza al variare della temperatura.
 Per verificare questa legge abbiamo quindi misurato la pressione di vapore dell'acqua a diverse temperature,
-ottenendo il grafico in figura \ref{fig:graph}. 
+ottenendo il grafico in Figura \ref{fig:graph}. 
 
-Applicando il logaritmo ad entrambi i membri, abbiamo linearizzato l'equazione (\ref{eq:clap}) ed eseguito la regressione lineare, ottenendo i seguenti valori per i parametri:
+Applicando il logaritmo ad entrambi i membri abbiamo linearizzato l'equazione (\ref{eq:clap}) ed eseguito la regressione lineare ottenendo i seguenti valori per i parametri:
 
 \begin{equation}
     P_0 = 1.6 \cdot 10^{11} \pm 0.4 \cdot 10^{11} \; \si{\pascal} \qquad \Delta H = 43900 \pm  700 \; \si{\joule\per\kilo\gram} 
 \end{equation}
 
-Il valore di $P_0$ è poco interessante in quanto si tratta di un semplice parametro, ma il valore
-$\Delta H$ ha un significato fisico preciso. Si tratta della quantità di energia necessaria a far evaporare un kilogrammo
-di acqua. Il valore da noi trovato è in accordo con i valori reperibili in letteratura. Dobbiamo
-comunque specificare che il calore latente di vaporizzazione varia leggermente con la temperatura,
+Il valore di $P_0$ è poco interessante in quanto si tratta di un semplice parametro, al contrario il valore
+$\Delta H$ ha un significato fisico preciso. Si tratta unfatti della quantità di energia necessaria a far evaporare un kilogrammo
+di acqua. Il valore da noi trovato è in accordo con i valori reperibili in letteratura. Dobbiamo tuttavia specificare che il calore latente di vaporizzazione varia leggermente con la temperatura,
 fatto non contemplato dai nostri calcoli.
 
 La Figura \ref{fig:graph} riassume i risultati fin qui ottenuti. I dati sperimentali risultano in buon accordo
-con la legge studiata. Addirittura le incertezze da noi assunte si sono rivelate soprastimate, infatti
-il chi quadro è risultato basso, e abbiamo dovuto corregerle. Questo ha senso, poiché sul manometro potevamo facilmente
+con la legge studiata. In particolare le incertezze da noi assunte si sono rivelate soprastimate, infatti
+il chi quadro è risultato basso, e pertanto abbiamo dovuto corregerle. Quanto avvenuto ha senso poiché sul manometro potevamo facilmente
 leggere variazioni di pressione di metà tacca (pari a 2500 \si{\pascal}).
 
 
@@ -111,5 +110,5 @@ Inserendo i valori numerici ricavati dai dati e propagando l'incertezza si ottie
 \end{equation}
 %
 che, tenendo conto del fatto che il luogo dove abbiamo eseguito l'esperimento è ad una quota di circa 350 m
-sul livello del mare, è un risultato impreciso ma corretto. L'altitudine influisce infatti sulla pressione atmosferica,
+sul livello del mare, è un risultato impreciso ma tuttavia corretto. L'altitudine infatti influisce sulla pressione atmosferica
 abbassando la temperatura di ebbollizione dell'acqua.
