--- a/E2/Latex/introduzione.tex
+++ b/E2/Latex/introduzione.tex
@@ -6,5 +6,5 @@ e 85$^\circ$C. Quindi, grazie alle misure di pressione e temperatura, verificare
 l'equazione di Clausius-Claperyon, che descrive la variazione della pressione di vapore
 in funzione della temperatura lungo la curva di equilibrio tra due fasi di una stessa sostanza,
 che nel nostro caso sono lo stato liquido e quello gassoso.
-Infine, sfruttando i dati raccolti che la legge sopracitata cercheremo di stimare un valore
+Infine, sfruttando i dati raccolti e la legge sopracitata cercheremo di stimare un valore
 per il calore latente di vaporizzazione dell'acqua.
