--- a/E2/Latex/title.tex
+++ b/E2/Latex/title.tex
@@ -1,7 +1,7 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	{\huge Verifica dell equazione di Clapeyron e misura del calore latente di vaporizzazione dell'acqua.}
+     	{\huge Verifica dell'equazione di Clapeyron e misura del calore latente di vaporizzazione dell'acqua.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
