--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -50,14 +50,14 @@ camera a passa pressione per controllare che il voltaggio al limite inferiore fo
 
 \subsubsection{Qualche dato}
 
-La pressione da noi raggiunta, come misurata con il vacuometro a catodo caldo, è di:
+La pressione da noi raggiunta, come misurata con il vacuometro a catodo caldo, è di circa:
 
 \begin{equation}
-    P = 6.45 (controllare per piacere) \cdot 10^{-4} \; \si{\pascal}
+    P = 6.45 \text{(controllare per piacere)} \cdot 10^{-4} \; \si{\pascal}
 \end{equation}
 
 \begin{figure}[b!]
-    \includegraphics[width=15cm]{drawing.pdf}
+    \includegraphics[width=14.5cm]{drawing.pdf}
     \caption{Schema dell'impianto da noi realizzato.}
     \label{fig:schema}
 \end{figure}
