--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -11,7 +11,7 @@ Il materiale messo a nostra disposizione è il seguente:
 
 \begin{itemize}
 	\item{una camera con un volume di $5930 \pm 10$ \si{\centi\metre}$^3$;}
-	\item{una pompa rotativa con pressione di vuoto limite dell'ordine di qualche Pascal;}
+	\item{una pompa rotativa con pressione di vuoto limite dell'ordine di circa $10^{-2}$ \si{\pascal};}
 	\item{una pompa ibrida turbomolecolare-molecular drag con relativa elettronica;}
 	\item{cravatte e O-ring in Viton di varie dimensioni;}
 	\item{tubi e flange;} %tubi con flange quanto basta;}
@@ -22,45 +22,40 @@ Il materiale messo a nostra disposizione è il seguente:
 
 \section{Esecuzione dell'esperienza}
 
-\subsubsection{Montaggio dell'impianto da vuoto}
+\subsection{Montaggio dell'impianto da vuoto}
 
-Per quanto riguarda il montaggio dell'impianto da vuoto abbiamo utilizzato il materiale sopraelencato,
-prestando attenzione che fossero rispettate le richieste dei tecnici di laboratorio,
+Per quanto riguarda il montaggio dell'impianto da vuoto abbiamo utilizzato il materiale sopraelencato
+prestando attenzione che fossero rispettate le richieste dei tecnici di laboratorio:
 ovvero che l'impianto soddisfacesse i seguenti requisiti:
 
 \begin{itemize}
-	\item{si doveva poter isolare la pompa turbomolecolare dal resto dell'impanto. In pratica abbiamo realizzato un bypass
-    dotato di valvola che collegava la pompa rotativa direttamente con la camera. In questo modo è stato possibile portare la camera a pressione atmosferica senza spegnere la pompa turbomolecolare, che necessita di un tempo abbastanza lungo (circa 10 minuti) per fermarsi.} %non mi piace ancora come è scritta...
+	\item{si doveva poter isolare la pompa turbomolecolare dal resto dell'impanto. In pratica si doveva realizzare un bypass dotato di valvola che collegava la pompa rotativa direttamente alla camera. In questo modo è stato possibile portare la camera a pressioni di circa $10^{-2}$ \si{\pascal} partendo da quella atmosfeica. Quindi è stato creato un prevuoto che ha consentito pertanto di far funzionare la pompa turbomolecolare. Infatti questa tipologia di pompe funzionano correttamente in regime molecolare;} %non mi piace ancora come è scritta...
     %WTF temperatura? % temperatura atmosferica senza spegnere la pompa turbomolecolare (che tra l'altro ci mette parecchi minuti a fermarsi);}
 	\item{si doveva avere la possibilità di riportare la camera da vuoto alla pressione atmosferica senza spegnere
-    la pompa turbomolecolare, che lavora correttamente in regime molecolare, ossia a pressioni inferiori a qualche Pascal;}
+    la pompa turbomolecolare, che lavora correttamente in regime molecolare.}
 \end{itemize}
 
 Uno schema dell'impianto è riportato in figura \ref{fig:schema}.
 
-\subsubsection{Taratura dei vacuometri Pirani}
+\subsection{Taratura dei vacuometri Pirani}
 
-Per tarare il vacuometro Pirani, che misurava la pressione in camera,
-abbiamo portato la pressione oltre il limite inferiore
-della sensibilità dello strumento, specificato nel manuale. Abbiamo quindi impostato il
-voltaggio in uscita al valore di 2 Volt lavorando su un potenziometro. Dopo aver isolato la pompa turbomolecolare dal resto
-dell'impianto, abbiamo riportato la pressione della camera alla pressione atmosferica e
-imposatato il valore di output del sensore a 10 Volt, lavorando su un secondo potenziometro. Abbiamo quindi riportato la pressione in
-camera a passa pressione per controllare che il voltaggio al limite inferiore fosse ancora 2 Volt.
+Per tarare il vacuometro Pirani, che misurava la pressione in camera, abbiamo portato la pressione oltre il limite inferiore
+della sensibilità dello strumento, specificato nel manuale. Abbiamo quindi impostato il voltaggio in uscita al valore di 2 Volt lavorando su un potenziometro. Dopo aver isolato la pompa turbomolecolare dal resto dell'impianto abbiamo riportato la pressione della camera alla pressione atmosferica. Abbiamo quindi inpostati il valore di output del sensore a 10 Volt, lavorando su un secondo potenziometro. Infine abbiamo riportato la pressione in camera a bassa pressione per controllare che il voltaggio al limite inferiore fosse ancora 2 Volt.
 
-\subsubsection{Qualche dato}
+\subsection{Qualche dato}
 
 La pressione da noi raggiunta, come misurata con il vacuometro a catodo caldo, è di circa:
 
 \begin{equation}
-    P = 6.45 \text{(controllare per piacere/non ne ho idea pasa. non ho io i dati. controlla tu mayeni)} \cdot 10^{-4} \; \si{\pascal}
+    P = 6.85 \cdot 10^{-4} \; \si{\pascal}
 \end{equation}
 
-\begin{figure}[b!]
-    \includegraphics[width=14.5cm]{drawing.pdf}
-    \caption{Schema dell'impianto da noi realizzato.}
-    \label{fig:schema}
-\end{figure}
+%\begin{figure}[b!]
+%   \includegraphics[width=14.5cm]{drawing.pdf}
+%   \caption{Schema dell'impianto da noi realizzato.}
+%   \label{fig:schema}
+%\end{figure}
+
 % direi che al grafico manca una legenda e dei riferimenti per capire cosa sono
 % le cose attaccate al sistema. per indicare quali sono i vacuometri pirani/a catodo
 % caldo/ a catodo freddo etc etc etc
