cucu la nonna non c'è piu

--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -50,11 +50,11 @@ La pressione da noi raggiunta, come misurata con il vacuometro a catodo caldo, Ã
     P = 6.85 \cdot 10^{-4} \; \si{\pascal}
 \end{equation}
 
-%\begin{figure}[b!]
-%   \includegraphics[width=14.5cm]{drawing.pdf}
-%   \caption{Schema dell'impianto da noi realizzato.}
-%   \label{fig:schema}
-%\end{figure}
+\begin{figure}[b!]
+   \includegraphics[width=14.5cm]{drawing.pdf}
+   \caption{Schema dell'impianto da noi realizzato.}
+   \label{fig:schema}
+\end{figure}
 
 % direi che al grafico manca una legenda e dei riferimenti per capire cosa sono
 % le cose attaccate al sistema. per indicare quali sono i vacuometri pirani/a catodo
