--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -11,7 +11,7 @@ Il materiale messo a nostra disposizione è il seguente:
 
 \begin{itemize}
 	\item{una camera con un volume di $5930 \pm 10$ \si{\centi\metre}$^3$;}
-	\item{una pompa rotativa con pressione di vuoto limite dell'ordine di circa $10^{-2}$ \si{\pascal};}
+	\item{una pompa rotativa con pressione di vuoto limite dell'ordine di qualche Pascal;}
 	\item{una pompa ibrida turbomolecolare-molecular drag con relativa elettronica;}
 	\item{cravatte e O-ring in Viton di varie dimensioni;}
 	\item{tubi e flange;} %tubi con flange quanto basta;}
@@ -25,14 +25,14 @@ Il materiale messo a nostra disposizione è il seguente:
 \subsection{Montaggio dell'impianto da vuoto}
 
 Per quanto riguarda il montaggio dell'impianto da vuoto abbiamo utilizzato il materiale sopraelencato
-prestando attenzione che fossero rispettate le richieste dei tecnici di laboratorio:
+prestando attenzione che fossero rispettate le richieste dei tecnici di laboratorio;
 ovvero che l'impianto soddisfacesse i seguenti requisiti:
 
 \begin{itemize}
-	\item{si doveva poter isolare la pompa turbomolecolare dal resto dell'impanto. In pratica si doveva realizzare un bypass dotato di valvola che collegava la pompa rotativa direttamente alla camera. In questo modo è stato possibile portare la camera a pressioni di circa $10^{-2}$ \si{\pascal} partendo da quella atmosfeica. Quindi è stato creato un prevuoto che ha consentito pertanto di far funzionare la pompa turbomolecolare. Infatti questa tipologia di pompe funzionano correttamente in regime molecolare;} %non mi piace ancora come è scritta...
+	\item{si doveva poter isolare la pompa turbomolecolare dal resto dell'impanto. In pratica si doveva realizzare un bypass dotato di valvola che collegava la pompa rotativa direttamente alla camera. In questo modo è stato possibile portare la camera a pressioni di qualche Pascal partendo da quella atmosferica. Quindi è stato creato un prevuoto che ha consentito pertanto di far funzionare la pompa turbomolecolare. Infatti questa tipologia di pompe funzionano correttamente in regime molecolare;} %non mi piace ancora come è scritta...
     %WTF temperatura? % temperatura atmosferica senza spegnere la pompa turbomolecolare (che tra l'altro ci mette parecchi minuti a fermarsi);}
 	\item{si doveva avere la possibilità di riportare la camera da vuoto alla pressione atmosferica senza spegnere
-    la pompa turbomolecolare, che lavora correttamente in regime molecolare.}
+    la pompa turbomolecolare.}
 \end{itemize}
 
 Uno schema dell'impianto è riportato in figura \ref{fig:schema}.
