dave è un tctaiugfjha

--- a/E4/Latex/Relazione.tex
+++ b/E4/Latex/Relazione.tex
@@ -16,8 +16,7 @@
 
 \input{title.tex}
 \input{introduzione.tex}
-\input{qualcosa.tex}
-\input{qualcosa.tex}
+\input{apparato.tex}
 %\input{conclusioni.tex}
 
 \end{document}
