--- a/E4/Latex/title.tex
+++ b/E4/Latex/title.tex
@@ -1,7 +1,7 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	{\huge Iniziazione al montaggio di un sistema da vuoto.}
+     	{\huge Taratura di una valvola a spillo.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
@@ -9,7 +9,7 @@
 		{\large Gruppo A6} \\
 	
 	\vspace{0.3cm}
-      	{\large 7 ottobre 2013}
+      	{\large 14 ottobre 2013}
     
     \vspace{0.7cm}
 
