--- a/E4/Latex/Relazione.tex
+++ b/E4/Latex/Relazione.tex
@@ -16,7 +16,7 @@
 
 \input{title.tex}
 \input{introduzione.tex}
-\input{apparato.tex}
-%\input{conclusioni.tex}
+\input{analisi.tex}
+%\input{tab.tex}
 
 \end{document}
