--- a/E4/Latex/introduzione.tex
+++ b/E4/Latex/introduzione.tex
@@ -1,17 +1,13 @@
 \section{Introduzione}
 
+Lo scopo di questa esperienza è quello di tarare una valvola a spillo (fine controlling needle valve) ricavando il flusso in ingresso in funzione di misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (calcolata in numero di giri).
 
 
 \section{Materiale utilizzato}
 
-
 \begin{itemize}
-	\item{una camera con un volume di $5930 \pm 10$ \si{\centi\metre}$^3$;}
-	\item{una pompa rotativa con pressione di vuoto limite dell'ordine di qualche Pascal;}
-	\item{una pompa ibrida turbomolecolare-molecular drag con relativa elettronica;}
-	\item{cravatte e O-ring in Viton di varie dimensioni;}
-	\item{tubi e flange;} %tubi con flange quanto basta;}
-	\item{2 valvole a membrana, 1 valvola a perdita calibrata, 1 valvola gate;}
-	\item{2 vacuometri Pirani, 1 vacuometro a ionizzazione a catodo caldo e 1 vacuometo a ionizzazione a catodo freddo;}
-	\item{cavi e lettore AGC per i quattro sensori sopracitati;}
+	\item{sistema da vuoto dotato di una camera con un volume V di $5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa e una pompa ibrida turbomolecolare-molecular drag;}
+	\item{valvola a spillo con regolazione micrometrica;}
+	\item{multimetro e sistema di acquisizione dati;}
+	\item{2 vacuometri Pirani;}
 \end{itemize}
