--- a/E4/Latex/tab.tex
+++ b/E4/Latex/tab.tex
@@ -1,10 +1,31 @@
 \begin{center}
-	\begin{tabular}{ c c c c c c c c c c c c }
-	\toprule
-	1 & 2 & 3 & 4 & 5 & 5.2 & 5.4 & 5.6 & 5.8 & 6 & 7 & 8 & 9 \\
-	\midrule
-       1.3980e-06 & 1.3966e-06 & 1.6286e-06 & 3.0668e-06 & 1.0383e-05 & 1.3067e-05 1.8431e-05 & 2.6026e-05 & 4.3632e-05 & 9.6295e-05 & 6.5170e-04 & 4.1163e-03 & 2.9884e-02
-       1.8617e-08 & 1.8197e-08 & 2.2002e-08 & 2.7229e-08 & 1.3016e-07 & 8.3042e-08 1.1322e-07 & 1.6312e-07 & 2.6838e-07 & 1.2289e-06 & 5.5883e-06 & 5.6583e-05 & 6.7334e-04
-	\bottomrule
+	\begin{tabular}{ c | c }
+   nr. giri & Q$_{valve}$ [Pa m$^{3}$ ] \\%s$^{-1}$}] \\ come cavolo faccio a scrivere le unità GIUSTE?!?!?!??!
+	\hline
+   1 & ( 1.39 $\pm$ 0.02 ) 10$^{-6}$ \\
+   2 & ( 1.38 $\pm$ 0.02 ) 10$^{-6}$ \\
+   3 & ( 1.63 $\pm$ 0.02 ) 10$^{-6}$ \\
+   4 & ( 3.07 $\pm$ 0.03 ) 10$^{-6}$ \\
+   5 & ( 1.04 $\pm$ 0.01 ) 10$^{-5}$ \\
+   5.2 & ( 1.31 $\pm$ 0.01 ) 10$^{-5}$ \\
+   5.4 & ( 1.84 $\pm$ 0.01 ) 10$^{-5}$ \\
+   5.6 & ( 2.60 $\pm$ 0.02 ) 10$^{-5}$ \\
+   5.8 & ( 4.36 $\pm$ 0.03 ) 10$^{-5}$ \\
+   6 & ( 9.6 $\pm$ 0.1 ) 10$^{-5}$ \\
+   7 & ( 6.52 $\pm$ 0.06 ) 10$^{-4}$ \\
+   8 & ( 4.12 $\pm$ 0.06 ) 10$^{-3}$ \\
+   9 & ( 2.99 $\pm$ 0.07 ) 10$^{-2}$ \\
+%   \hline
+
+%	\begin{tabular}{ c c c c c c c c c c c c }
+%	\toprule
+%	1 & 2 & 3 & 4 & 5 & 5.2 & 5.4 & 5.6 & 5.8 & 6 & 7 & 8 & 9 \\
+%	\midrule
+%       1.3980e-06 & 1.3966e-06 & 1.6286e-06 & 3.0668e-06 & 1.0383e-05 & 1.3067e-05 1.8431e-05 & 2.6026e-05 & 4.3632e-05 & 9.6295e-05 & 6.5170e-04 & 4.1163e-03 & 2.9884e-02
+%       1.8617e-08 & 1.8197e-08 & 2.2002e-08 & 2.7229e-08 & 1.3016e-07 & 8.3042e-08 1.1322e-07 & 1.6312e-07 & 2.6838e-07 & 1.2289e-06 & 5.5883e-06 & 5.6583e-05 & 6.7334e-04
+%	\bottomrule
 	\end{tabular}
+	% NON SO COME INTRODURRE IL CAMPO
+%	\caption{La Tabella mostra i risultati numerici del flusso in ingresso a secona del numero di giri della valvola a spillo}
+    \label{tab:table}
 \end{center}
