--- a/E4/Latex/introduzione.tex
+++ b/E4/Latex/introduzione.tex
@@ -1,12 +1,11 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza è quello di tarare una valvola a spillo (fine controlling needle valve) ricavando il flusso in ingresso in funzione di misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (calcolata in numero di giri).
-
+Lo scopo di questa esperienza è quello di tarare una valvola a spillo (fine controlling needle valve) ricavando il flusso, anche se sarebbe meglio dire portata, in ingresso da misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (misurata in numero di giri).
 
 \section{Materiale utilizzato}
 
 \begin{itemize}
-	\item{sistema da vuoto dotato di una camera con un volume V di $5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa e una pompa ibrida turbomolecolare-molecular drag;}
+	\item{sistema da vuoto costituito da una camera di volume $V = 5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa, una pompa ibrida turbomolecolare-molecular drag connessi in modo opportuno;}
 	\item{valvola a spillo con regolazione micrometrica;}
 	\item{multimetro e sistema di acquisizione dati;}
 	\item{2 vacuometri Pirani;}
