--- a/E4/Latex/tab.tex
+++ b/E4/Latex/tab.tex
@@ -1,21 +1,23 @@
 \begin{center}
-	\begin{tabular}{ c | c }
-   nr. giri & Q$_{valve}$ [Pa m$^{3}$ ] \\%s$^{-1}$}] \\ come cavolo faccio a scrivere le unità GIUSTE?!?!?!??!
-	\hline
-   1 & ( 1.39 $\pm$ 0.02 ) 10$^{-6}$ \\
-   2 & ( 1.38 $\pm$ 0.02 ) 10$^{-6}$ \\
-   3 & ( 1.63 $\pm$ 0.02 ) 10$^{-6}$ \\
-   4 & ( 3.07 $\pm$ 0.03 ) 10$^{-6}$ \\
-   5 & ( 1.04 $\pm$ 0.01 ) 10$^{-5}$ \\
-   5.2 & ( 1.31 $\pm$ 0.01 ) 10$^{-5}$ \\
-   5.4 & ( 1.84 $\pm$ 0.01 ) 10$^{-5}$ \\
-   5.6 & ( 2.60 $\pm$ 0.02 ) 10$^{-5}$ \\
-   5.8 & ( 4.36 $\pm$ 0.03 ) 10$^{-5}$ \\
-   6 & ( 9.6 $\pm$ 0.1 ) 10$^{-5}$ \\
-   7 & ( 6.52 $\pm$ 0.06 ) 10$^{-4}$ \\
-   8 & ( 4.12 $\pm$ 0.06 ) 10$^{-3}$ \\
-   9 & ( 2.99 $\pm$ 0.07 ) 10$^{-2}$ \\
-%   \hline
+	\begin{tabular}{ l c c }
+        \toprule
+        nr. giri & Q$_{valve}$ [Pa m$^3$ s$^{-1}$] & C [m$^3$ s$^{-1}$] \\ 
+        \midrule
+        0   & (1.309 $\pm$ 0.005) 10$^{-5}$ & \\
+        1   & (1.40 $\pm$ 0.02) 10$^{-6}$ & (1.43 $\pm$  0.02) 10$^{-11}$ \\
+        2   & (1.40 $\pm$ 0.02) 10$^{-6}$ & (1.41 $\pm$  0.02) 10$^{-11}$ \\
+        3   & (1.63 $\pm$ 0.02) 10$^{-6}$ & (1.66 $\pm$  0.02) 10$^{-11}$ \\
+        4   & (3.07 $\pm$ 0.03) 10$^{-6}$ & (3.13 $\pm$  0.03) 10$^{-11}$ \\
+        5   & (1.04 $\pm$ 0.01) 10$^{-5}$ & (1.06 $\pm$  0.01) 10$^{-10}$ \\
+        5.2 & (1.31 $\pm$ 0.01) 10$^{-5}$ & (1.332 $\pm$ 0.008) 10$^{-10}$ \\
+        5.4 & (1.84 $\pm$ 0.01) 10$^{-5}$ & (1.88 $\pm$  0.01) 10$^{-10}$ \\
+        5.6 & (2.60 $\pm$ 0.02) 10$^{-5}$ & (2.65 $\pm$  0.02) 10$^{-10}$ \\
+        5.8 & (4.36 $\pm$ 0.03) 10$^{-5}$ & (4.45 $\pm$  0.03) 10$^{-10}$ \\
+        6   &  (9.6 $\pm$ 0.1)  10$^{-5}$ & (9.8 $\pm$   0.1) 10$^{-10}$ \\
+        7   & (6.52 $\pm$ 0.06) 10$^{-4}$ & (6.64 $\pm$  0.06) 10$^{-9}$ \\
+        8   & (4.12 $\pm$ 0.06) 10$^{-3}$ & (4.20 $\pm$  0.06) 10$^{-8}$ \\
+        9   & (2.99 $\pm$ 0.07) 10$^{-2}$ & (3.05 $\pm$  0.07) 10$^{-7}$ \\
+    \bottomrule
 
 %	\begin{tabular}{ c c c c c c c c c c c c }
 %	\toprule
@@ -27,5 +29,5 @@
 	\end{tabular}
 	% NON SO COME INTRODURRE IL CAMPO
 %	\caption{La Tabella mostra i risultati numerici del flusso in ingresso a secona del numero di giri della valvola a spillo}
-    \label{tab:table}
+    %\label{tab:table}
 \end{center}
