aggiunto paragrafo temp, pressione, umidità

--- a/E4/Latex/title.tex
+++ b/E4/Latex/title.tex
@@ -1,11 +1,11 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	{\huge Taratura di una valvola a spillo.}
+     	{\huge Taratura di una valvola a spillo}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
-      	{francescopasa@gmail.com} \\
+      	{francescopasa@gmail.com, Bazzanella.Davide@gmail.com} \\
 		{\large Gruppo A6} \\
 	
 	\vspace{0.3cm}
