--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -12,7 +12,10 @@ Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad u
 	\item{togliere il tappo posto a chiusura della valvola a spillo e misurare, tramite il multimetro e il sistema di acquisizione dati, il variare della pressione interna della camera in funzione del tempo;}
 	\item{infine riportare la camera da vuoto ad una pressione dell'ordine $10^{-3}$ \si{\pascal}, isolando la pompa turbomolecolare e usando quella rotativa qualora necessario;}
 \end{itemize}
-Mentre la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, le misure successive hanno invece avuto lo scopo di ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri completi e di 5.2, 5.4, 5.6 e 5.8 giri.\\
+
+Mentre la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, le misure successive hanno invece avuto lo scopo di ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri completi e di 5.2, 5.4, 5.6 e 5.8 giri.
+
+Grazie alle condizioni meteo stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $XY \pm xy$ gradi centigradi, una pressione atmosferica di $941 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%.
 
 \section{Analisi dati}
 
