aggiunto E1(bis) e leggere modifiche a E4 - vado a dormire

--- a/E4/Latex/introduzione.tex
+++ b/E4/Latex/introduzione.tex
@@ -1,6 +1,6 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza è quello di tarare una valvola a spillo (fine controlling needle valve) ricavando il flusso, anche se sarebbe meglio dire portata, in ingresso da misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (misurata in numero di giri).
+Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{fine controlling needle valve}) ricavando il flusso, anche se sarebbe meglio dire portata, in ingresso da misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (misurata in numero di giri).
 
 \section{Materiale utilizzato}
 
