--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -15,7 +15,7 @@ Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad u
 
 Mentre la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, le misure successive hanno invece avuto lo scopo di ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri completi e di 5.2, 5.4, 5.6 e 5.8 giri.
 
-Grazie alle condizioni meteo stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $XY \pm xy$ gradi centigradi, una pressione atmosferica di $941 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%.
+Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $XY \pm xy$ \si{\kelvin}, una pressione atmosferica di $941 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%.
 
 \section{Analisi dati}
 
