--- a/E1(bis)/Latex/Relazione.tex
+++ b/E1(bis)/Latex/Relazione.tex
@@ -8,6 +8,7 @@
 \usepackage{wrapfig}
 \usepackage{multirow}
 \usepackage{sidecap}
+\usepackage[stable]{footmisc}
 \usepackage{siunitx}
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
