--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -14,7 +14,7 @@ Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad u
 \end{itemize}
 Mentre la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, le misure successive hanno invece avuto lo scopo di ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri completi e di 5.2, 5.4, 5.6 e 5.8 giri.\\
 
-Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $XY \pm xy$ \si{\kelvin}, una pressione atmosferica di $941 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%.
+Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $294 \pm 0.5$ \si{\kelvin}, una pressione atmosferica di $981 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%. Le incertezze di queste ultimi dati sono di risoluzione.
 
 \begin{figure}[h!]
     \includegraphics[width=15cm]{graph.pdf}
@@ -57,6 +57,3 @@ La tabella ed il relativo grafico in Figura \ref{fig:graph} mostrano chiaramente
 l'apertura della valvola, anzi gli ultimi punti del grafico sembrano suggerire un andamento esponenziale (che su un grafico
 con scala logaritmica come quello riportato in figura, risulta in una linea retta). Tuttavia i primi 2/3
 punti deviano in maniera vistosa da tale andamento.
-
-Dal punto di vista didattico, l'esperienza mostra come i soli effetti di degasamento provochino un flusso circa pari ad una valvola a
-spillo aperta di 5.2 giri. Quindi sono effettu tutt'altro che trascurabili.
