--- a/E5/Latex/introduzione.tex
+++ b/E5/Latex/introduzione.tex
@@ -1,6 +1,6 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza di laboratorio è quello di calcolare la velocità di pompaggio della pompa rotativa e della pompa turbomolecolare in nostro possesso. Quindi vogliamo ricavare il volume reale di gas in funzione del tempo che la pompa riesce ad evacuare dall'impianto.
+Lo scopo di questa esperienza di laboratorio è quello di calcolare la velocità di pompaggio delle pompe rotativa e turbomolecolare in nostro possesso. Quindi vogliamo ricavare il volume reale di gas in funzione del tempo che la pompa riesce ad evacuare dall'impianto da vuoto.
 
 \section{Materiale utilizzato}
 
