--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -1,23 +1,66 @@
 \begin{table}
-    \begin{tabular}{l c c c}
+    \begin{tabular}{l c c c c c}
         \toprule
-        Nr. giri & Q & $S\ped{rotativa}$ & $S\ped{turbo} \\
+        Nr. giri & $Q  [\si{\pa\m\m\m\per\s}]$ & $\sigma (Q) [\si{\pa\m\m\m\per\s}]$ & $S\ped{rotativa} [\si{\m\m\m\per\s}]$ &
+        $\sigma (S\ped{rotativa}) [\si{\m\m\m\per\s}]$ & $S\ped{turbo} [\si{\m\m\m\per\s}]$ &
+        $\sigma (S\ped{turbo}) [\si{\m\m\m\per\s}]$ \\
         \midrule
-        1
-        2
-        3
-        4
-        5
-        5.2
-        5.4
-        5.6
-        5.8
-        6
-        7
-        8
-        9
+        1   & 0.00013 & 1.8617e-06 &                   &                   & 0.029125        & 0.00293821154865 \\
+        2   & 0.00013 & 1.962e-06  &                   &                   & 0.02879375      & 0.00290824293227 \\
+        3   & 0.00016 & 2.2002e-06 &                   &                   & 0.032572        & 0.00328678977752 \\
+        4   & 0.00030 & 2.7229e-06 & 0.000131855016235 & 1.32373703717e-05 & 0.03608         & 0.00362219304695 \\
+        5   & 0.00103 & 1.3016e-05 & 0.000315597117771 & 3.18067226996e-05 & 0.0399346153846 & 0.00402471748356 \\
+        5.2 & 0.00130 & 8.3042e-06 & 0.000351827594516 & 3.52537345308e-05 & 0.040834375     & 0.00409167512276 \\
+        5.4 & 0.00184 & 1.1322e-05 & 0.000413355664841 & 4.14134836725e-05 & 0.0438833333333 & 0.00439660530404 \\
+        5.6 & 0.00260 & 1.6312e-05 & 0.000478897721927 & 4.79837415967e-05 & 0.04732         & 0.00474128513959 \\
+        5.8 & 0.00436 & 2.6838e-05 & 0.000592110619957 & 5.93229678244e-05 & 0.04848         & 0.00485716246794 \\
+        6   & 0.00962 & 0.00012289 & 0.000764887079965 & 7.71090559735e-05 & 0.0458547619048 & 0.00462266587445 \\
+        7   & 0.06517 & 0.00055883 & 0.00135131654975  & 0.000135627555918 &  & \\
+        8   & 0.41163 & 0.0056583  & 0.00176213082573  & 0.000177870106921 &  & \\
+        9   & 2.9884  & 0.067334   & 0.00178338842667  & 0.000182809766946 &  & \\
         \bottomrule
     \end{tabular}
 \end{table}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
