--- a/E5/Latex/analisi.tex
+++ b/E5/Latex/analisi.tex
@@ -47,4 +47,4 @@ Tra i motivi che possono incidere su queste discrepanze fra i valori sperimental
 	\item{wf}
 \end{itemize}
 
-\input[tab.tex]
+\input{tab.tex}
