--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -1,9 +1,10 @@
 \begin{table}
-    \begin{tabular}{l c c c c c}
+    \begin{tabular}{l c c c c c c}
         \toprule
-        Nr. giri & $Q  [\si{\Pa\cubic\m\per\s}]$ & $\sigma (Q) [\si{\Pa\cubic\m\per\s}]$ & $S\ped{rotativa} [\si{\cubic\m\per\s}]$ &
-        $\sigma (S\ped{rotativa}) [\si{\cubic\m\per\s}]$ & $S\ped{turbo} [\si{\cubic\m\per\s}]$ &
-        $\sigma (S\ped{turbo}) [\si{\cubic\m\per\s}]$ \\
+        Nr. giri &
+        $Q  [\si{\Pa\cubic\meter\per\second}]$ & $\sigma (Q) [\si{\Pa\cubic\meter\per\second}]$ &
+        $S\ped{rotativa} [\si{\cubic\meter\per\second}]$ & $\sigma (S\ped{rotativa}) [\si{\cubic\meter\per\second}]$ &
+        $S\ped{turbo} [\si{\cubic\meter\per\second}]$ & $\sigma (S\ped{turbo}) [\si{\cubic\meter\per\second}]$ \\
         \midrule
         1   & 0.00013 & 1.8617e-06 &                   &                   & 0.029125        & 0.00293821154865 \\
         2   & 0.00013 & 1.962e-06  &                   &                   & 0.02879375      & 0.00290824293227 \\
